NIFI-15543 Incorporated comment as disabledReason for disabled test on Windows testProcessRestarted in PythonControllerInteractionIT.